k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test-app
  name: test-app
spec:
  ports:
    - name: test-app
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: test-app
  type: ClusterIP
status:
  loadBalancer: {}
